site-config/openshift-prod/sas-logon-route.yaml
---
# Directory: site-config/openshift-prod/

# File: sas-logon-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sas-logon
  namespace: sas-viya
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: "sas-ingress-tls"
    cert-utils-operator.redhat-cop.io/generate-java-keystores: "true"
spec:
  host: sas-logon.apps.example.openshift.com
  to:
    kind: Service
    name: sas-logon
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
